--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,15 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fffff;
   --foreground: #171717;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-roboto: 'Roboto', sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,9 +18,13 @@
     --foreground: #ededed;
   }
 }
-
+.font-roboto{
+  font-family: var(--font-roboto);
+}
+.font-poppins {
+  font-family: var(--font-poppins);
+}
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
